@@ -2,6 +2,7 @@ Revision history for Perl module Plugin::Loader
 
 0.03 2014-10-04 NEILB
     - Clarification in the doc on the use of max_depth.
+    - Tidied up the find_modules() method.
 
 0.02 2014-10-03 NEILB
     - Added a max_depth attribute, so you can control whether you want
